<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <fragment
 		android:id="@+id/map"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
 		class="com.google.android.gms.maps.SupportMapFragment"/>
    
    <LinearLayout 
        android:id="@+id/LinearLayout" 
        android:layout_height="wrap_content" 
        android:layout_width="match_parent">
        <Button 
            android:id="@+id/button1" 
            android:text="@string/button1" 
            android:layout_width="0dp" 
            android:layout_weight="1" 
            android:layout_height="wrap_content"></Button>
        <Button 
            android:id="@+id/button2" 
            android:text="@string/button2" 
            android:layout_width="0dp" 
            android:layout_weight="1" 
            android:layout_height="wrap_content"></Button>
        <Button 
            android:id="@+id/button3" 
            android:text="@string/button3" 
            android:layout_width="0dp" 
            android:layout_weight="1" 
            android:layout_height="wrap_content"></Button>
        <Button 
            android:id="@+id/button4" 
            android:text="@string/button4" 
            android:layout_width="0dp" 
            android:layout_weight="1" 
            android:layout_height="wrap_content"></Button>
    </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/LinearLayout1" 
        android:layout_height="wrap_content" 
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
    	android:layout_alignParentRight="true">
        <Button 
            android:id="@+id/enable_exist" 
            android:text="@string/enable_point" 
            android:layout_width="0dp" 
            android:layout_weight="1" 
            android:layout_height="wrap_content"></Button>
        <Button 
            android:id="@+id/disable_exist" 
            android:text="@string/disable_point" 
            android:layout_width="0dp" 
            android:layout_weight="1" 
            android:layout_height="wrap_content"></Button>
    </LinearLayout>

</RelativeLayout>
